--- a/laba_2.html
+++ b/laba_2.html
@@ -4,7 +4,7 @@
     <style>
         a{
             font-size: 29px;
-            color: violet;
+            color: red;
             display: block;
             text-transform: uppercase;
         }
