--- a/laba_2.html
+++ b/laba_2.html
@@ -4,6 +4,8 @@
     
 </head>
 <body>
-    
+    <a href="https://htmlacademy.ru/courses/130">Знакомство с SVG</a>
+    <a href="https://htmlacademy.ru/courses/187">Оформление SVG-фигур</a>
+    <a href="https://htmlacademy.ru/courses/259">Размеры в SVG</a>
 </body>
 </html>
