--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
-<head></head>
+<head>
+    <title>Лабораторные</title>
+</head>
 <body>
 <h1>Ссылки на мои лабораторные работы</h1>
   <h2>А вот и ссылочки:</h2>
+  <a href="http://web-labs-2sem.std-942.ist.mospolytech.ru/labs/laba-1.html">Лабораторная 1</a>
 </body>
 </html>
