--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
     <title>Лабораторные</title>
+    <style>
+        a{display:block;}
+    
+    </style>
 </head>
 <body>
 <h1>Ссылки на мои лабораторные работы</h1>
