--- a/laba-3.html
+++ b/laba-3.html
@@ -124,7 +124,45 @@
             <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">Yes</a>
         </div>
     </div>
-    
+    <div class="container">
+        <h1>What are you dreaming about?</h1>
+        <div class="card hoverable small">
+            <div class="card-image">
+                <img src="https://img1.goodfon.ru/original/1920x1080/4/95/art-okean-nebo-para-noch.jpg" alt="">
+                <span class="card-title">What is your dream?</span>
+            </div>
+            <div class="card-content">
+                <p>What is a dream? What place do dreams occupy in our lives? What are we dreaming about? And is it worth dreaming at all, living with illusions? We will try to find the answer to these and other questions using wise and beautiful quotes about dreams with meaning. It is no secret that many great people were those dreamers. And, of course, they had their own opinion on this matter.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">Link Blog</a>
+            </div>
+        </div>
+        <div class="card hoverable small">
+            <div class="card-image">
+                <img src="https://img2.akspic.ru/image/76398-vecher-emociya-san_francisko-svet-temnota-1920x1080.jpg" alt="">
+                <span class="card-title">You are captive of your dreams</span>
+            </div>
+            <div class="card-content">
+                <p>What is a dream? What place do dreams occupy in our lives? What are we dreaming about? And is it worth dreaming at all, living with illusions? We will try to find the answer to these and other questions using wise and beautiful quotes about dreams with meaning. It is no secret that many great people were those dreamers. And, of course, they had their own opinion on this matter.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">Link Blog</a>
+            </div>
+        </div>
+        <div class="card hoverable small">
+            <div class="card-image">
+                <img src="https://wallpapers.moviemania.io/desktop/movie/38757/8a26dd/tangled-desktop-wallpaper.jpg?w=2552&h=1442" alt="">
+                <span class="card-title">What is the difference between a dream and desire?</span>
+            </div>
+            <div class="card-content">
+                <p>What is a dream? What place do dreams occupy in our lives? What are we dreaming about? And is it worth dreaming at all, living with illusions? We will try to find the answer to these and other questions using wise and beautiful quotes about dreams with meaning. It is no secret that many great people were those dreamers. And, of course, they had their own opinion on this matter.</p>
+            </div>
+            <div class="card-action">
+                <a href="#">Link Blog</a>
+            </div>
+        </div>
+    </div>
    
     <div class="footer-copyright">
         <div class="container">
