--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   <a href="http://web-labs-2sem.std-942.ist.mospolytech.ru/labs/laba-1.html">Лабораторная 1</a>
   <a href="http://web-labs-2sem.std-942.ist.mospolytech.ru/labs/laba-2.html">Лабораторная 2</a>
   <a href="http://web-labs-2sem.std-942.ist.mospolytech.ru/labs/laba-3/laba-3.html">Лабораторная 3</a>
+    <a href="http://web-labs-2sem.std-942.ist.mospolytech.ru/labs/laba5/печать.html">Лабораторная 5</a>
+    <a href="http://web-labs-2sem.std-942.ist.mospolytech.ru/labs/laba6/animation.html">Лабораторная 6</a>
 </body>
 </html>
